Fixed image resize problem and mobile dropdown issue

--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -5,6 +5,11 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.banner {
+    max-width: 100%;
+    min-width: 100%;
+}
+
 .navbar-ganja {
     background-color: #212121;
     border-color: #000;
