--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -1,6 +1,7 @@
 body {
     background-image: url('../img/bg.png');
     background-repeat: repeat;
+    background-size: auto;
     background-color: #000;
     font-family: 'Roboto', sans-serif;
 }
