--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -57,3 +57,13 @@ footer {
     padding-top: 20px;
     text-align: center;
 }
+
+@media (min-width: 768px) {
+    .container {
+        width: 100%;
+    }
+
+    .navbar {
+        width: 100%;
+    }
+}
