--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -84,6 +84,11 @@ footer {
         margin-left: auto;
     }
 
+    #navbar {
+        margin: 0;
+        width: 100%;
+    }
+
     .container {
         padding-left: 0;
         padding-right: 0;
@@ -106,7 +111,8 @@ footer {
 
     ul.nav {
         padding: 0;
-        margin: 5px;
+        margin: 3px;
+        width: 100%;
     }
 
     button.navbar-toggle {
