--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -15,6 +15,14 @@ body {
     font-size: 1.1em;
 }
 
+ul.nav a.login-dropdown-toggle {
+    color: #bababa;
+}
+
+div#navbar a, div.navbar-login a {
+    color: #bababa;
+}
+
 nav.navbar {
     color: #efefef;
 }
@@ -64,6 +72,65 @@ nav.navbar {
     box-shadow: 5px 5px 5px #444;
 }
 
+.dropdown-menu {
+    background-color: #212121;
+}
+
+.login-dropdown {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    height: 195px;
+    width: 265px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: left;
+    background-color: #212121;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+}
+
+ul.login-list {
+    margin: 10px 12px 10px 15px;
+    padding: 0;
+}
+
+ul.login-list li {
+    list-style: none;
+    padding: 6px 3px;
+}
+
+ul.login-list input {
+    width: 230px;
+    padding: 5px;
+    border-radius: 5px;
+    color: #212121;
+}
+
+ul.login-list button.btn {
+    float: right;
+    padding: 4px 10px;
+    margin-right: 0;
+    color: #212121;
+    background-color: #f47921;
+}
+
+li#forgot-pass {
+    padding-top: 17px;
+    clear: both;
+    font-size: .9em;
+}
+
 footer {
     color: #bababa;
     margin-top: 20px;
@@ -84,8 +151,26 @@ footer {
         margin-left: auto;
     }
 
-    #navbar {
+    div#navbar {
         margin: 0;
+        width: 100%;
+    }
+    
+    ul.login-list button.btn {
+        float: none;
+        width: 100%;
+    }
+    
+    div.login-dropdown {
+        position: static;
+        width: 100%;
+        float: none;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+    
+    ul.login-list input {
         width: 100%;
     }
 
