--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -3,13 +3,19 @@
         <div class="navbar-login navbar-header pull-right">
           <ul class="nav navbar-nav pull-right">
             <li><a class="login-dropdown-toggle" href="#">Login<span class="caret"></span></a>
-              <div class="login-dropdown">
-                <ul class="login-list">
-                  <li><input type="text" name="login-name" class="login-input" placeholder="Village Name"/></li>
-                  <li><input type="password" name="login-password" class="login-input" placeholder="Password"/></li>
-                  <li><button type="button" class="btn">Login</button></li>
-                  <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
-                </ul>
+              <div class="login-dropdown-normal">
+                <div class="login-dropdown">
+                  <ul class="login-list">
+                    <li><input type="text" name="login-name" class="login-input" placeholder="Village Name"/></li>
+                    <li><input type="password" name="login-password" class="login-input" placeholder="Password"/></li>
+                    <li><button type="button" class="btn">Login</button></li>
+                    <li id="remember-me">
+                      <input type="checkbox" name="remember-user" class="login-cb"/>
+                      <label>Remember me</label>
+                    </li>
+                    <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
@@ -23,6 +29,9 @@
               <span class="icon-bar"></span>
             </button>
           </div>
+              
+          <div id="login-dropdown-mobile"></div>
+            
           <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav navbar-left">
               <li><a href="/" class="navbar-ganja-links">Home</a></li>
