--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -30,7 +30,7 @@
             </button>
           </div>
               
-          <div id="login-dropdown-mobile"></div>
+          <div class="login-dropdown-mobile"></div>
             
           <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav navbar-left">
