--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -5,19 +5,26 @@
             <li><a class="login-dropdown-toggle" href="#">Login<span class="caret"></span></a>
               <div class="login-dropdown-normal">
                 <div class="login-dropdown">
-                  <ul class="login-list">
-                    <li><input type="text" name="login-name" class="login-input" placeholder="Village Name"/></li>
-                    <li><input type="password" name="login-password" class="login-input" placeholder="Password"/></li>
-                    <li><button type="button" class="btn">Login</button></li>
-                    <li id="remember-me">
-                      <input type="checkbox" name="remember-user" class="login-cb"/>
-                      <label>Remember me</label>
-                    </li>
-                    <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
-                  </ul>
+                  <form name="login-form" action="" method="post">
+                    <ul class="login-list">
+                      <li><input type="text" name="login-name" class="login-input" placeholder="Village Name"/></li>
+                      <li><input type="password" name="login-password" class="login-input" placeholder="Password"/></li>
+                      <li><button type="button" class="btn">Login</button></li>
+                      <li id="remember-me">
+                        <input type="checkbox" name="remember-user" class="login-cb"/>
+                        <label>Remember me</label>
+                      </li>
+                      <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
+                    </ul>
+                  </form>
                 </div>
               </div>
             </li>
+          </ul>
+        </div>
+        <div class="navbar-login navbar-header pull-right">
+          <ul class="nav navbar-nav pull-right">
+            <li><a href="/register" class="navbar-ganja-links">Register</a></li>
           </ul>
         </div>
         <div class="container-fluid">
