--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -148,9 +148,23 @@ li#forgot-pass {
     width: 100%;
 }
 
+.warning {
+    color: red;
+    font-size: .9em;
+}
+
 .register-field {
     display: block;
     float: left;
+    padding: 10px;
+    height: 100px;
+    width: 100%;
+}
+
+.register-field-cb {
+    display: block;
+    float: left;
+    margin-top: 10px;
     padding: 10px;
     height: 100px;
     width: 100%;
@@ -193,7 +207,7 @@ input.registration-input {
 
 .register-button {
     padding: 5px;
-    margin: 5px;
+    margin: 10px 5px;
     height: 50;
 }
 
