--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -7,12 +7,12 @@
                 <div class="login-dropdown">
                   <form name="login-form" action="" method="post">
                     <ul class="login-list">
-                      <li><input type="text" name="login-name" class="login-input" placeholder="Village Name" /></li>
-                      <li><input type="password" name="login-password" class="login-input" placeholder="Password" /></li>
+                      <li><input type="text" name="login-name" class="form-control" placeholder="Village Name" /></li>
+                      <li><input type="password" name="login-password" class="form-control" placeholder="Password" /></li>
                       <li><button type="button" class="btn">Login</button></li>
                       <li id="remember-me">
                         <input type="checkbox" name="remember-user" class="login-cb" />
-                        <label>Remember me</label>
+                        <label style="display: inline">Remember me</label>
                       </li>
                       <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
                     </ul>
