--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -82,6 +82,10 @@ nav.navbar {
     margin-bottom: 15px;
 }
 
+.news-section {
+    padding: 0 30px 0 15px;
+}
+
 .news-content {
     padding: 15px 5px;
     border-top: 3px solid #cdcdcd;
