Fixed modal buttons

--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -119,6 +119,10 @@ nav.navbar {
     cursor: pointer;
 }
 
+.close-button {
+    border: none;
+}
+
 .modal-content {
     padding: 0;
     margin: 0;
