--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -5,11 +5,11 @@
             <li><a class="login-dropdown-toggle" href="#">Login<span class="caret"></span></a>
               <div class="login-dropdown-normal">
                 <div class="login-dropdown">
-                  <form name="login-form" action="" method="post">
+                  <form name="login-form" action="/login" method="post">
                     <ul class="login-list">
-                      <li><input type="text" name="login-name" class="form-control" placeholder="Village Name" /></li>
+                      <li><input type="text" name="login-email" class="form-control" placeholder="Email Address" /></li>
                       <li><input type="password" name="login-password" class="form-control" placeholder="Password" /></li>
-                      <li><button type="button" class="btn">Login</button></li>
+                      <li><button type="submit" class="btn">Login</button></li>
                       <li id="remember-me">
                         <input type="checkbox" name="remember-user" class="login-cb" />
                         <label style="display: inline">Remember me</label>
