Fix js temporarily (need to figure out webpack, or just use clojurescript)

--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -1,32 +1,6 @@
      <div id="navbar-root">
       <nav class="navbar navbar-default navbar-ganja">
-        <div class="navbar-login navbar-header pull-right">
-          <ul class="nav navbar-nav pull-right">
-            <li><a class="login-dropdown-toggle" href="#">Login<span class="caret"></span></a>
-              <div class="login-dropdown-normal">
-                <div class="login-dropdown">
-                  <form name="login-form" action="/login" method="post">
-                    <ul class="login-list">
-                      <li><input type="text" name="login-email" class="form-control" placeholder="Email Address" /></li>
-                      <li><input type="password" name="login-password" class="form-control" placeholder="Password" /></li>
-                      <li><button type="submit" class="btn">Login</button></li>
-                      <li id="remember-me">
-                        <input type="checkbox" name="remember-user" class="login-cb" />
-                        <label style="display: inline">Remember me</label>
-                      </li>
-                      <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
-                    </ul>
-                  </form>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="navbar-login navbar-header pull-right">
-          <ul class="nav navbar-nav pull-right">
-            <li><a href="/register" class="navbar-ganja-links">Register</a></li>
-          </ul>
-        </div>
+        <div class="login-section"></div>
         <div class="container-fluid">
           <div class="navbar-header">
             <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
