--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -26,7 +26,7 @@ button {
 
 .nav-content-wrapper {
     border: 8px solid #101010;
-    border-radius: 10px;
+    border-radius: 12px;
 }
 
 .navbar {
@@ -62,6 +62,14 @@ nav.navbar {
 .navbar-ganja {
     background-color: #212121;
     border-color: #000;
+}
+
+.login-button {
+    padding: 8px 10px 0 0;
+}
+
+.btn-default {
+    background-color: #cdcdcd;
 }
 
 .content {
