--- a/resources/public/includes/header.html
+++ b/resources/public/includes/header.html
@@ -10,7 +10,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ganja.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-    <script src="js/lib/react-with-addons.js"></script>
+    <script src="js/lib/react.js"></script>
+    <script src="js/lib/marked.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
