--- a/resources/public/includes/navbar.html
+++ b/resources/public/includes/navbar.html
@@ -16,7 +16,7 @@
           <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav navbar-left">
               <li><a href="/" class="navbar-ganja-links">Home</a></li>
-              <li class="dropdown">
+              <li class="dropdown dropdown-li">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clan Info<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="/about" class="navbar-ganja-links">About</a></li>
