--- a/resources/public/includes/logged-out.html
+++ b/resources/public/includes/logged-out.html
@@ -7,7 +7,7 @@
             <ul class="login-list">
               <li><input type="text" name="login-email" class="form-control" placeholder="Email Address" /></li>
               <li><input type="password" name="login-password" class="form-control" placeholder="Password" /></li>
-              <li><button type="submit" class="btn">Login</button></li>
+              <li><button type="submit" class="btn orange-btn">Login</button></li>
               <li id="remember-me">
                 <input type="checkbox" name="remember-user" class="login-cb" />
                 <label style="display: inline">Remember me</label>
